@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2009, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2011, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * -------------
  * RingPlot.java
  * -------------
- * (C) Copyright 2004-2009, by Object Refinery Limited.
+ * (C) Copyright 2004-2011, by Object Refinery Limited.
  *
  * Original Author:  David Gilbert (for Object Refinery Limtied);
  * Contributor(s):   Christoph Beck (bug 2121818);
@@ -44,8 +44,9 @@
  * 12-Oct-2006 : Added configurable section depth (DG);
  * 14-Feb-2007 : Added notification in setSectionDepth() method (DG);
  * 23-Sep-2008 : Fix for bug 2121818 by Christoph Beck (DG);
- * 13-jul-2009 : Added support for shadow generator (DG);
- * 
+ * 13-Jul-2009 : Added support for shadow generator (DG);
+ * 11-Oct-2011 : Check sectionOutlineVisible - bug 3237879 (DG);
+ *
  */
 
 package org.jfree.chart.plot;
@@ -414,7 +415,8 @@ public class RingPlot extends PiePlot implements Cloneable, Serializable {
                 g2.fill(path);
                 Paint outlinePaint = lookupSectionOutlinePaint(key);
                 Stroke outlineStroke = lookupSectionOutlineStroke(key);
-                if (outlinePaint != null && outlineStroke != null) {
+                if (getSectionOutlinesVisible() && outlinePaint != null 
+                        && outlineStroke != null) {
                     g2.setPaint(outlinePaint);
                     g2.setStroke(outlineStroke);
                     g2.draw(path);
